--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body{margin:0; color:var(--ink);overflow-x: hidden; background:radial-gradient(1
 h2{text-align: center;padding: 16px;}
 
 /* Utility */
-.container{width:min(1200px,92%); margin-inline:auto}
+.container{width:min(1200px,92%); margin-inline:auto;}
 .section{padding: clamp(45px, 10vw, 45px) 0}
 .grid{display:grid; gap:clamp(16px,2vw,28px)}
 .flex{display: flex;flex-wrap: wrap; justify-content: center;align-items: center; gap: 16px;  div{min-width: 380px; width: 50%;} form{min-width: 380px;}}
@@ -124,21 +124,13 @@ table tr.featured td{background:linear-gradient(350deg,rgba(255,215,0,.06),trans
 .tilt:hover{ box-shadow: 0 8px 28px rgba(255, 215, 0, .18);background-position:80% 20%; color:black;}
 @media(max-width:650px){.features{padding: 0px;}}
 
-/*uxui*/
-#uxui{
-  background-image: url(fondoux.webp);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  border-radius: 24px;
-  padding: 24px 6px;
-  margin-top: 42px;
-    .container{background-color: #000000d1; padding: 24px;border-radius: 12px; display: flex; flex-wrap: wrap;justify-content: center;}
-    p{padding: 16px; text-align: center; max-width: 900px;}
-}
+
 
 /* animaciones interactivas */
-#animacionEscudo{width: 100%; max-width: 400px;min-width: 300px;filter: invert(1); transition: .7s ease-in; &:hover{filter: invert(0);}}
+#animacionEscudo{width: 100%; max-width: 400px;min-width: 300px;filter: invert(1); transition: .7s ease-in;}
+#animacionEscudo.activo {
+  filter: invert(0);
+}
 
 /* Comparison */
 .compare{display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,0.9fr)); gap:18px;width: 100%; justify-content: center;}
@@ -227,6 +219,7 @@ footer{border-top:1px solid rgba(255,255,255,.08); padding:46px 0; background:#0
   gap: clamp(16px, 2.5vw, 32px);
   align-items: center;
   padding: 16px;
+  
 }
 @media (max-width: 980px){
   .servicios-two-col{ grid-template-columns: 1fr; }
@@ -352,6 +345,10 @@ white-space: pre-wrap;
   border-radius: 2px;
   filter: drop-shadow(0 0 4px rgba(255,215,0,.35));
 }
+
+
+label,input,textarea{display:block; font-weight:600;width: 100%;}
+form .btn{width: 100%; justify-content: center;}
 
 /* layout responsivo */
 @media(max-width: 900px){
